template/ec2/12_vpc_acl.tf
# -*- Mode: HCL; -*-

# https://www.terraform.io/docs/providers/aws/r/network_acl.html
# https://www.terraform.io/docs/providers/aws/r/network_acl_rule.html

locals {
  acls = [
    "${aws_network_acl.public.id}",
  ]
}

# ACL
## public
resource "aws_network_acl" "public" {
  vpc_id = "${aws_vpc.main.id}"

  subnet_ids = ["${aws_subnet.public.*.id}"]

  tags = "${merge(map("Name","${var.ProjectName}_public"),"${local.common_tags}")}"
}
